# serializer version: 1
# name: test_entities[update][update.peblar_ev_charger_customization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.peblar_ev_charger_customization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Customization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Customization',
    'platform': 'peblar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'customization',
    'unique_id': '23-45-A4O-MOF_customization',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[update][update.peblar_ev_charger_customization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/peblar/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peblar EV Charger Customization',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: 'Peblar-1.9',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: 'Peblar-1.9',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: None,
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 0>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: None,
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.peblar_ev_charger_customization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[update][update.peblar_ev_charger_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.peblar_ev_charger_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Firmware',
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'peblar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '23-45-A4O-MOF_firmware',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[update][update.peblar_ev_charger_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'firmware',
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/peblar/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peblar EV Charger Firmware',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '1.6.1+1+WL-1',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '1.6.2+1+WL-1',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: None,
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 0>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: None,
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.peblar_ev_charger_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
